manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 4
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/react-java0mysql-app-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: arielguez/react-java0mysql-frontend:53
          name: frontend
          ports:
            - containerPort: 3000
      restartPolicy: Always
