manifest/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grad.arieldevops.tech
    secretName: argocd-secret
  rules:
  - host: grad.arieldevops.tech
    http:
      paths:
      - path: /argocd(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
