manifest/react-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react
  namespace: react
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/react(/|$)(.*) /$2 break;
    
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grad.arieldevops.tech
  rules:
  - host: grad.arieldevops.tech
    http:
      paths:
      - path: /react/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 3000
